--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -524,4 +524,51 @@ button {
 
 .response-to-message {
   display: none;
+  cursor: pointer;
+}
+
+// NEWS
+.news_item {
+    border: 1px solid #666;
+    border-radius: 4px;
+    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
+    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
+    background-color: #424242;
+    color: white;
+    margin-top: 5px;
+    padding: 5px;
+    overflow: auto;
+}
+
+.news_item_header {
+    float: left;
+    font-size: 1.4em;
+}
+
+.news_item_created {
+    float: right;
+}
+
+.news_item_text {
+    margin-top: 5px;
+}
+
+.news_item_info {
+    float: right;
+    margin-top: 5px;
+}
+
+.news_item a {
+    transition: color 0.3s, text-shadow 0.3s linear 0s;
+    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
+    color: #aaa;
+    text-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
+}
+
+.news_item a:hover {
+    transition: color 0.3s, text-shadow 0.3s linear 0s;
+    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
+    color: #47bbff;
+    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
 }
