--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -458,13 +458,23 @@ div.field_with_errors {
     text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
 }
 
+.post_upper {
+    width: 99%;
+    float: left;
+}
 
 .post_info {
     float: left;
-    width: 99%;
+    width: 40%;
     background-color: #424242;
     padding: 5px;
     padding-right: 0;
+}
+
+.post_actions {
+    width: 58%;
+    float: right;
+    text-align: right;
 }
 
 p.user_name {
@@ -522,9 +532,12 @@ button {
     margin-left: 5px;
 }
 
+.response-to-message-button {
+    cursor: pointer;
+}
+
 .response-to-message {
   display: none;
-  cursor: pointer;
 }
 
 // NEWS
