custom static pages, hmmmm

--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -111,7 +111,7 @@ body {
   padding-right: 4px;
   padding-top: 4px;
   line-height: 1.2em;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 // Links
