--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -13,6 +13,7 @@
   <h4><%= t 'admin.settings' %></h4>
   <ul>
     <li><%= link_to (t 'admin.menulinks.personalisation'), admin_personalisation_index_path %></li>
+    <li><%= link_to (t 'admin.menulinks.pages'), admin_static_pages_path %></li>
     <li><%= link_to (t 'admin.menulinks.interface'), admin_menulinks_path %></li>
     <li><%= link_to (t 'admin.forum.interface'), admin_forum_index_path %></li>
   </ul>
