--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -6,7 +6,7 @@
 <article>
   <p><%= t 'admin.pages.index.desc_html' %></p>
   <div class="rightfloat">
-    [<%= link_to (t 'common.actions.add', :obj => (t 'objects.page.self')), new_admin_page_path %>]
+    [<%= link_to (t 'common.actions.add', :obj => (t 'objects.page.self')), new_admin_static_page_path %>]
   </div>
   <div class="clear"></div>
   <div class="table_container">
