first tracker issue

--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -585,3 +585,20 @@ button {
     color: #47bbff;
     text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
 }
+
+// =============================================================================================================
+// = Tracker ===================================================================================================
+// =============================================================================================================
+
+.tracker_line {
+  width:  100%;
+}
+
+.tracker_link, .tracker_date {
+  display: inline-block;
+  position: relative;
+}
+
+.tracker_link {
+  width:  80%;
+}
