Fix for webkit browsers inproperly shows welcome string.

--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -253,6 +253,13 @@ div.field_with_errors {
     color: white;*/
 }
 
+.user_links {
+
+}
+
+.user_welcome {
+    float: left;
+}
 
 // Footer
 .footer_text {
