--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -326,7 +326,6 @@ div.field_with_errors {
 .forum {
     float: left;
     width: 59%;
-    background-color: #555;
     margin: 0;
     padding: 0;
     min-height: 4em;
@@ -334,30 +333,36 @@ div.field_with_errors {
 }
 
 .forum_posts {
-    float: left;
+    position: absolute;
+    left: 59%;
     width: 10%;
-    background-color: #555;
+    height: 100%;
     text-align: center;
-    min-height: 4em;
     border-left: 1px solid #222;
     border-right: 1px solid #222;
 }
 
 .forum_last_topic {
-    float: left;
+    float: right;
     width: 29.9%;
-    background-color: #555;
-    min-height: 4em;
-    max-height: 4em;
     padding-right: 5px;
     text-align: right;
 }
 
-.forum_index_avatar {
-    padding-top: 5px;
+.forum_cont {
+  background: #555;
+  position:  relative;
+}
+
+div.forum_index_avatar {
+  width: 48px;
+  float: right;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
+img.forum_index_avatar {
     width: 48px;
-    float: right;
-    padding-left: 5px;
     @include ramochka_mikhaila
 }
 
