--- a/app/views/tracker/index.html.erb
+++ b/app/views/tracker/index.html.erb
@@ -6,27 +6,14 @@
 
 <article>
   <div class="tracker_container">
-      <div class="tracker_line tracker_header">
-        <div class="tracker_link">
-          <%= t 'activerecord.attributes.tracker_line.title' %>
-        </div>
-        <div class="tracker_user">
-          <%= t 'activerecord.attributes.tracker_link.user' %>
-        </div>
-        <div class="tracker_date">
-          <%= t 'activerecord.attributes.tracker_line.created_at' %>
-        </div>
-      </div>
     <% @tracker.each do |line| %>
       <div class="tracker_line">
         <div class="tracker_link">
           <%= link_to line.title, line.obj.absolute_url %>
         </div>
-        <div class="tracker_user">
-          <%= line.obj.user.nick %>
-        </div>
-        <div class="tracker_date">
-          <%= l line.created_at, :format => :long %>
+        <div class="tracker_post_info">
+          <p><%= line.obj.user.nick %></p>
+          <p><%= l line.created_at, :format => :long %></p>
         </div>
       </div>
     <% end %>
